--- a/.gitignore
+++ b/.gitignore
@@ -123,7 +123,7 @@ celerybeat.pid
 .env
 .venv
 env/
-venv/
+venv*/
 ENV/
 env.bak/
 venv.bak/
@@ -158,3 +158,13 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+.tool-versions
+.vscode
+Jmol/
+Jmol*
+node_modules/
+package-lock.json
+temp.ipynb
+README.html
+step0*-*
+tools/mp/mpint_config.yaml
